[package]
name = "courier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yewdux = "0.9.0"
yew = { version="0.20", features=["csr"] }
surrealdb = "1.0.0-beta.8"
serde = {version = "1.0.152", features = ["derive"]}
thiserror = "1"